# sentinel

./: .env.example  .gitignore  ARCHITECTURE.md  INTERCEPTION_SETUP.md  Makefile  PROBLEM_STATEMENT.md  README.md  TOOL_CATALOG.md  docker-compose.yml  no-docker-setup.md  setup.ps1  setup.sh
backend/: .coverage  Dockerfile  main.py  probe_library.json  pyproject.toml
backend/agent/: orchestrator.py  prompts.py  reflection.py  state.py
backend/agent/tools/: arize_tool.py  base.py  elastic_tool.py  policy_tool.py  target_tool.py
backend/api/: schemas.py
backend/api/routes/: audit.py  intercept.py  reports.py
backend/eval/: EVALUATION.md  dataset.json  error_analysis.py  runner.py
backend/ledger/: __init__.py  transaction_log.py
backend/modules/: __init__.py  adapter.py  base.py  hallucination.py  pii_leakage.py  prompt_injection.py
backend/orchestrator/: __init__.py  process_manager.py
backend/output/: aggregator.py  json_serialiser.py  pdf_generator.py  storage.py
backend/output/templates/: report.html
backend/policies/: eu_ai_act.json  gdpr.json
backend/proxy/: __init__.py  dispatcher.py  interfaces.py  server.py
backend/tests/: conftest.py
backend/tests/test_api/: test_audit_routes.py  test_intercept_routes.py  test_reflection_integration.py
backend/tests/test_modules/: test_aggregator.py  test_hallucination.py  test_pdf_generator.py  test_pii_leakage.py  test_pii_scanner.py  test_prompt_injection.py  test_reflection.py
backend/tests/test_tools/: test_arize_tool.py  test_policy_tool.py
frontend/: next.config.js  package-lock.json  (+2 more)
(+29 files in other folders)
