[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta:__legacy__"

[project]
name = "sentinel-backend"
version = "1.1.0"
description = "Sentinel AI GRC Auditor Agent — Backend"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "langchain>=0.2.0",
    "langchain-google-genai>=1.0.6",
    "langchain-community>=0.2.0",
    "google-generativeai>=0.7.0",
    "weasyprint>=61.0",
    "jinja2>=3.1.4",
    "httpx>=0.27.0",
    "python-multipart>=0.0.9",
    "google-cloud-storage>=2.17.0",
    "google-cloud-secret-manager>=2.20.0",
    "python-dotenv>=1.0.1",
    "aiofiles>=23.2.1",
    "structlog>=24.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.7",
    "pytest-mock>=3.14.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "respx>=0.21.1",
    "ruff>=0.4.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["agent*", "api*", "modules*", "output*", "eval*", "proxy*", "orchestrator*", "ledger*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=. --cov-report=term-missing --cov-fail-under=60"

[tool.ruff]
line-length = 100
target-version = "py311"
